fix: past result year links now wrap

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -2100,6 +2100,7 @@ input.form-control-lg {
   align-items: center;
   justify-content: center;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .result-years li,
